create page to  display data from API

--- a/pages/nav.html
+++ b/pages/nav.html
@@ -2,10 +2,10 @@
   <ul id="dropdown1" class="dropdown-content">
     <li class="teal"><a href="#" class="white-text">Daftar Liga</a></li>
     <li class="divider"></li>
+    <li><a class="link" href="#ligaIng">Liga Inggris</a></li>
     <li><a class="link" href="#ligaJer">Liga Jerman</a></li>
-    <li><a class="link" href="#ligaBel">Liga Belanda</a></li>
-    <li><a class="link" href="#ligaSpa">Liga Spanyol</a></li>
-    <li><a class="link"href="#ligaPer">Liga Perancis</a></li>
+    <li><a class="link" href="#ligaSpn">Liga Spanyol</a></li>
+    <li><a class="link"href="#ligaPrc">Liga Perancis</a></li>
   </ul>
 
   <li><a class="link" href="#home">Beranda</a></li>
