--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   </nav>
   <div class="container" id="body-content"></div>
   <script src="js/materialize.min.js"></script>
+  <script src="js/api.js"></script>
   <script src="js/nav.js"></script>
+
 </body>
 </html>
