--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- NAVBAR -->
   <nav class="grey darken-4" role="navigation">
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo" id="logo-container">LIGA BOLA</a>
+      <p class="brand-logo" id="logo-container">LIGA BOLA</p>
       <a href="#" class="sidenav-trigger" data-target="nav-mobile">☰</a>
       
       <ul class="topnav right hide-on-med-and-down"></ul>
