--- a/pages/about.html
+++ b/pages/about.html
@@ -4,20 +4,20 @@
   </div>
   <div class="col l6 m12 about-bio">
     <h4>Shaddam Alghafiqih Bazdha</h4>
-    <p>Mahasiswa</p>
+    <p class="role">Mahasiswa</p>
   </div>
 </div>
-<div class="row">
-  <div class="col m4 s12">
-    <img src="#" alt="Instagram">
+<div class="row sosmed">
+  <div class="col m4 s12 text-center">
+    <i class="fab fa-3x fa-instagram"></i>
     <p>Shaddam.ab</p>
   </div>
-  <div class="col m4 s12">
-    <img src="#" alt="Facebook">
+  <div class="col m4 s12 text-center">
+    <i class="fab fa-3x fa-facebook-square"></i>
     <p>Shaddam Alghafiqih Bazdha</p>
   </div>
-  <div class="col m4 s12">
-    <img src="#" alt="E-Mail">
+  <div class="col m4 s12 text-center">
+    <i class="fas fa-3x fa-envelope"></i>
     <p>shaddam.albz@gmail.com</p>
   </div>
 </div>
