--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="js/materialize.min.js"></script>
   <script src="js/api.js"></script>
   <script src="js/nav.js"></script>
-
+  <script src="js/sw-regis.js"></script>
+  <script src="js/sw.js"></script>
 </body>
 </html>
