--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
   <script src="js/materialize.min.js"></script>
   <script src="js/api.js"></script>
   <script src="js/nav.js"></script>
-  <script src="js/sw-regis.js"></script>
-  <script src="js/sw.js"></script>
+  <script>
+    // REGISTER SERVICE WORKER
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker
+        .register('/sw.js')
+        .then(() => {
+          console.log('Register Service Worker Succesful');
+        })
+        .catch(() => {
+          console.log('Register Service Worker Fail');
+        });
+    });
+  } else {
+    console.log('This browser not support service worker');
+  }
+  </script>
 </body>
 </html>
