--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script src="js/api.js"></script>
   <script src="js/nav.js"></script>
   <script>
-    // REGISTER SERVICE WORKER
+  // REGISTER SERVICE WORKER
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
       navigator.serviceWorker
@@ -40,6 +40,13 @@
   } else {
     console.log('This browser not support service worker');
   }
+  // tes button save
+  document.addEventListener('DOMContentLoaded', () => {
+    const save = document.getElementById('save');
+    save.onclick = () => {
+      console.log('button ditekan');
+    };
+  });
   </script>
 </body>
 </html>
