--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     </div>
   </nav>
   <div class="container" id="body-content"></div>
-  <script src="js/materialize.min.js"></script>
-  <script src="js/idb.js"></script>
-  <script src="js/db.js"></script>
-  <script src="js/nav.js"></script>
-  <script src="js/api.js"></script>
+  <script src="/js/materialize.min.js"></script>
+  <script src="/js/idb.js"></script>
+  <script src="/js/db.js"></script>
+  <script src="/js/nav.js"></script>
+  <script src="/js/show.js"></script>
+  <script src="/js/api.js"></script>
   <script>
   // REGISTER SERVICE WORKER
   if ('serviceWorker' in navigator) {
