--- a/pages/nav.html
+++ b/pages/nav.html
@@ -10,7 +10,7 @@
 
   <li><a class="link" href="#home">Beranda</a></li>
   <li><a class="link"href="#about">Tentang</a></li>
-  <li><a class="link" href="#favorite">Tim Favorit</a></li>
+  <li><a class="link" href="#saved">Tim Favorit</a></li>
   <li>
     <a class="dropdown-trigger btn" href="#" data-target="dropdown1">Daftar Liga<i class="material-icons right">arrow_drop_down</i></a>
   </li>
