--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
   <div class="container" id="body-content"></div>
   <script src="/js/materialize.min.js"></script>
   <script src="/js/sw-regis.js"></script>
+  <script src="/js/notifikasi.js"></script>
   <script src="/js/idb.js"></script>
   <script src="/js/db.js"></script>
   <script src="/js/show.js"></script>
   <script src="/js/api.js"></script>
   <script src="/js/nav.js"></script>
-  <script>
-  </script>
 </body>
 </html>
