--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
   <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#221122">
+  <link rel="apple-touch-icon" href="/img/football-512-maskable.png">
+  <link rel="icon" href="/img/football-512.png" type="image/gif" sizes="16x16">
 </head>
 <body>
   <!-- NAVBAR -->
