--- a/pages/teams.html
+++ b/pages/teams.html
@@ -1,1 +1,6 @@
 <div id="teams-detail"></div>
+<div class="fixed-action-btn">
+  <a class="btn-floating btn-large">
+      <i class="large material-icons" id="save"></i>
+  </a>
+</div>
